--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,20 @@
+golang-github-eyedeekay-gosam (0.1.0+git20190221.2896c83-2) UNRELEASED; urgency=medium
+
+  [ idk ]
+  * Update changelog for 0.1.0+git20190221.2896c83-1 release
+  * add signature type support
+  * Don't check version if handshake succeeds, just accept that OK is OK
+  * Don't check version if handshake succeeds, just accept that OK is OK
+  * make dialer context aware and avoid redundant session create's
+  * make dialer context aware and avoid redundant session create's
+  * correct CONTRIBUTING.md
+  * correct CONTRIBUTING.md
+  * correct CONTRIBUTING.md
+  * explicitly et invalid initial lastaddr
+  * remove 'commented-out' id
+
+ -- idk <hankhill19580@gmail.com>  Thu, 28 Feb 2019 13:54:27 -0500
+
 golang-github-eyedeekay-gosam (0.1.0+git20190221.2896c83-1) unstable; urgency=medium
 
   [ idk ]
