--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+golang-github-eyedeekay-gosam (0.1.1) bionic; urgency=medium
+
+  * Incorporate all the recent bug-fixes and improvements and stabilize.
+
+ -- idk <hankhill19580@gmail.com>  Fri, 15 Mar 2019 14:46:21 -0500
+
 golang-github-eyedeekay-gosam (0.1.0+git20190221.2896c83ubuntu1+nmu2ubuntu1) bionic; urgency=medium
 
   * only run the offline tests by default
