--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+golang-github-eyedeekay-gosam (0.32.23) bionic; urgency=medium
+
+  * Get rid of the debug directory, just move it into the source
+  * Get rid of the old example, just use the one in the README
+
+ -- idk <hankhill19580@gmail.com>  Tue, 25 Aug 2020 10:29:26 -0500
+
 golang-github-eyedeekay-gosam (0.3.2.1) bionic; urgency=medium
 
   * Get rid of the debug directory, just move it into the source
