--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+golang-github-eyedeekay-gosam (0.32.25) UNRELEASED; urgency=medium
+
+  * Support dual-keys by default in all future versions
+
+ -- idk <hankhill19580@gmail.com>  Thu, 03 Sept 2020 04:25:04 -0500
+
 golang-github-eyedeekay-gosam (0.32.24) UNRELEASED; urgency=medium
 
   * Improve the mutex thingy
