--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+golang-github-eyedeekay-gosam (0.32.28) UNRELEASED; urgency=medium
+
+  * Maintenance updates
+
+ -- idk <hankhill19580@gmail.com>  Mon, 23 Nov 2020 20:40:4 -0500
+
 golang-github-eyedeekay-gosam (0.32.27) UNRELEASED; urgency=medium
 
   * Maintenance updates
